--- a/demo.html
+++ b/demo.html
@@ -630,7 +630,7 @@ body #bsap_aplink, body #bsap_aplink:hover { display: block; font-size: 10px; ma
 	    <section class="page3">
 	      <div class="page_container">
           <h1>ISHQ WALA LOVEEE</h1><br><br>
-          <h2>Teri dili iccha puri kar di!<br>Cahh Bancho!</di></h2>
+          <h2>Teri dili iccha puri kar di!<br>Cahh Banho!</di></h2>
           <audio style="text-align: left;" controls>
             <source src="assets/final.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
